# ghostfs

./: CMakeLists.txt
.github/workflows/: compile-ghostfs.yml
